Implement verify email link
