# server/openapi_server/openapi/openapi.yaml
@@ -309,6 +309,21 @@ paths:
       - user
       x-codegen-request-body-name: body
       x-openapi-router-controller: openapi_server.controllers.user_controller
+  /user/verifyEmail:
+    post:
+      description: Verify Email of current user
+      operationId: verify_email
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+          description: successful operation
+      summary: Verify Email of current user
+      tags:
+      - user
+      x-openapi-router-controller: openapi_server.controllers.user_controller
 components:
   schemas:
     TranslatedText:
